# axio

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  design-qa.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
apps/axio-cli/: Cargo.toml
apps/axio-cli/src/: main.rs
apps/axio-desktop/: package.json  tsconfig.json  vite.config.ts
apps/axio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/axio-desktop/src-tauri/capabilities/: default.json
apps/axio-desktop/src-tauri/src/: lib.rs  main.rs  terminal.rs
apps/axio-desktop/ui/: app.js  index.html  styles.css
apps/axio-desktop/ui/src/: App.tsx  main.tsx  types.ts
apps/axio-desktop/ui/src/components/: CommandPalette.tsx  ContextDock.tsx  EmptyWorkspace.tsx  NewTaskDialog.tsx  OpenWorkspaceDialog.tsx  PanelResizeHandle.tsx  SettingsDialog.tsx  Sidebar.tsx  Statusbar.tsx  TaskCanvas.tsx  TaskComposer.tsx  Timeline.tsx  Titlebar.tsx  WorkspaceToolbar.tsx
apps/axio-desktop/ui/src/components/context/: BrowserTool.tsx  FileExplorerTool.tsx  OutputTool.tsx  PlanTool.tsx  (+2 more)
apps/axio-desktop/ui/src/data/: activity-order.ts  demo-state.ts  diff-files.ts  repository-tree.ts  task-runtime.ts  terminal-input.ts  terminal-output.ts  terminal-providers.ts  terminal-rendering.ts  terminal-resize.ts  terminal-sessions.ts  workspace-state.ts
apps/axio-desktop/ui/src/hooks/: useLayout.ts  useLightDismiss.ts  usePanelSizes.ts  useSettings.ts  useTerminalSessions.ts
apps/axio-desktop/ui/src/services/: tauri.ts  terminal-events.ts
apps/axio-desktop/ui/styles/: dialogs.css  foundation.css  inspector.css  responsive.css  shell.css  sidebar.css  task.css  terminal-workspace.css  workflow.css  workspace-toolbar.css
apps/axio-desktop/ui/tests/: activity-order.test.ts  repository-tree.test.ts  settings-migration.test.ts  task-runtime.test.ts  terminal-providers.test.ts
crates/axio-core/: Cargo.toml
crates/axio-core/src/: demo.rs  error.rs  lib.rs  lifecycle.rs  persistence.rs  repository.rs  tests.rs  workspace.rs
crates/axio-protocol/: Cargo.toml
crates/axio-protocol/src/: lib.rs
docs/: README.md  architecture.md  decisions.md  desktop-design.md  development.md  new-machine-setup.md  product-direction.md  product-plan.md  protocol.md  reference-repositories.md  releasing.md  security-model.md  settings.md  status-and-direction.md  terminal-mode.md  testing.md  troubleshooting.md  ui-audit-2026-07-22.md  ui-audit-implementation.md  ui-improvement-plan.md  versioning.md
docs/design/: design-qa.md  qa-comparison.html
scripts/: check-ui.mjs
(+11 files in other folders)
