[package]
name = "axio-cli"
description = "Automation-friendly command-line interface for Axio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "axio"
path = "src/main.rs"

[dependencies]
axio-core.workspace = true
serde_json.workspace = true

[lints]
workspace = true
