[package]
name = "axio-core"
description = "Core workspace and coding-agent orchestration state for Axio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axio-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
